--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,21 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(Server
         server_main.cpp
 
-        linux/tcp/linux_server_tcp.cpp
-        linux/udp/linux_server_udp.cpp
+        linux/tcp/tcp_conn_server.cpp
+        linux/udp/udp_conn_server.cpp
 
-        linux/ip4/linux_server_ip4.cpp
+        linux/ip4/ip4_conn_server.cpp
 )
 
 add_executable(Client
         client_main.cpp
 
-        linux/tcp/linux_client_tcp.cpp
-        linux/udp/linux_client_udp.cpp
-        linux/dns/linux_client_dns.cpp
+        linux/tcp/tcp_conn_client.cpp
+        linux/udp/udp_conn_client.cpp
+        linux/dns/dns_client.cpp
+        linux/icmp/icmp_conn_client.cpp
 
-        linux/ip4/linux_client_ip4.cpp
+        linux/ip4/ip4_conn_client.cpp
 
 )
 target_link_libraries(Client PRIVATE resolv)
