--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(ServerClient)
 
 set(CMAKE_CXX_STANDARD 17)
 
+include(FindPCAP.cmake)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 add_executable(Server
         server_main.cpp
@@ -10,6 +13,7 @@ add_executable(Server
         linux/tcp/tcp_conn_server.cpp
         linux/udp/udp_conn_server.cpp
         linux/ip4/ip4_conn_server.cpp
+
 )
 
 add_executable(Client
@@ -21,8 +25,11 @@ add_executable(Client
         linux/icmp/icmp_conn_client.cpp
         linux/ether/ethernet_conn_client.cpp
         linux/ether/arp_conn_client.cpp
+        linux/data_link_layer/data_link_layer_gateway.cpp
+        linux/data_link_layer/data_link_traffic.cpp
 
         linux/ip4/ip4_conn_client.cpp
 
 )
-target_link_libraries(Client PRIVATE resolv)
+target_link_libraries(Client ${PCAP_LIBRARY})
+#target_link_libraries(Client PRIVATE resolv)
